--- a/src/components/pre.css
+++ b/src/components/pre.css
@@ -1,151 +1,171 @@
 html,
 body,
 #root {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  background-color: white;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.pre-container {
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
 .top-box,
 .bottom-box {
-    height: 50vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-    font-weight: bold;
-    flex-shrink: 0;
+  height: 50vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
 }
 
 .top-box {
-    background-color: #FFFCFD;
-
+  background-color: #fffcfd;
 }
 
 .bottom-box {
-    background-color: #FED8E3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  background-color: #fed8e3;
+  position: relative;
 }
 
 .message {
-    margin: 10px;
+  margin: 10px;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+
 }
 
 .message-1 {
-    color: #86A788;
-    font-size: 2.5rem;
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    margin-top: -200px;
-    margin-bottom: -30px;
+  color: #86a788;
+  font-size: 3vw;
+  font-weight: 700;
+  margin-top: -26vh;
+  margin-bottom: -5vh;
 }
 
 .message-2 {
-    color: #FFCFCF;
-    font-size: 2.5rem;
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
+  color: #ffcfcf;
+  font-size: 3vw;
+  font-weight: 700;
 }
 
 .custom-button {
-    background-color: #86A788;
-    color: #FFFCFD;
-    font-size: 2.5rem;
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    border: none;
-    border-radius: 15px;
-    width: 450px;
-    height: 100px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    position: absolute;
-
+  background-color: #86a788;
+  color: #fffcfd;
+  font-size: 2.5vw;
+  font-family: 'Inter', sans-serif;
+  font-weight: 550;
+  border: none;
+  border-radius: 15px;
+  width: 70vw;
+  max-width: 450px;
+  height: 10vh;
+  min-height: 60px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  position: absolute;
+  bottom: 5vh;
+  top: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .custom-button:hover {
-    background-color: #789479;
+  background-color: #789479;
 }
 
 .Cat {
-    width: 730px;
-    height: auto;
-    top: 85px;
-    position: absolute;
-    pointer-events: none;
-
+  width: 50vw;
+  max-width: 730px;
+  height: auto;
+  position: absolute;
+  top: 12vh;
+  left: 50%;
+  transform: translateX(-50%);
+  pointer-events: none;
 }
 
 .eye {
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 300px;
-    transition: transform 0.1s linear;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    pointer-events: auto;
+  width: 8vw;
+  height: 8vw;
+  max-width: 70px;
+  max-height: 70px;
+  position: absolute;
+  top: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
 }
 
 .left-eye {
-    left: 655px;
+  left: 47%;
+  transform: translateX(-100%);
 }
 
 .right-eye {
-    right: 655px;
+  left: 53%;
+  transform: translateX(0%);
 }
 
 .pupil {
-    width: 50px;
-    height: 50px;
-    background: black;
-    border-radius: 50%;
-    position: relabtive;
-    transform: translate(-50%, -50%);
-    transition: transform 0.1s ease-out;
+  width: 80%;
+  height: 80%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.1s ease-out;
+  position: relative;
 }
 
-.eye-reflection {
-    position: absolute;
-    background-color: white;
-    border-radius: 50%;
-    pointer-events: none;
-}
-
-.reflection-1 {
-    width: 10px;
-    height: 10px;
-    top: 5px;
-    left: 5px;
-}
-
-.reflection-2 {
-    width: 5px;
-    height: 5px;
-    bottom: 10px;
-    right: 10px;
-    opacity: 0.8;
+.flw1,
+.flw2 {
+  position: absolute;
+  z-index: 10;
+  transform: scale(0.4);
+  width: auto;
+  height: auto;
 }
 
 .flw1 {
-    position: absolute;
-    z-index: 10;
-    top: 75px;
-    left: 480px;
-    transform: scale(0.5);
+  top: 12vh;
+  left: 31vw;
 }
 
 .flw2 {
-    position: absolute;
-    z-index: 10;
-    top: 180px;
-    right: 490px;
-    transform: scale(0.5);
+  top: 22vh;
+  right: 32vw;
+}
+
+/* Responsive Media Queries */
+@media screen and (max-width: 768px) {
+
+  .message-1,
+  .message-2 {
+    font-size: 6vw;
+  }
+
+  .custom-button {
+    font-size: 6vw;
+    height: 12vh;
+  }
+
+  .eye {
+    top: 34vh;
+  }
+}
+
+
+.fade-out {
+  background-color: white;
+  opacity: 0;
+  transform: scale(0.95);
+  transition: opacity 0.6s ease, transform 1.0s ease;
+  pointer-events: none;
 }
