--- a/src/components/Load.css
+++ b/src/components/Load.css
@@ -133,3 +133,19 @@
 .load-content {
     padding: 20px;
 }
+
+.darken-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 5; /* อยู่ระหว่าง background และ content */
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  
+  .load-container.fade-out {
+    opacity: 0;
+  }
