--- a/src/components/Load.css
+++ b/src/components/Load.css
@@ -5,6 +5,8 @@
     overflow: hidden;
     opacity: 1;
     transition: opacity 1s ease;
+    background-color: white;
+
 }
 
 .load-container.fade-out {
@@ -124,12 +126,6 @@
 }
 
 
-/* ทำให้พื้นหลังเห็นชัดขึ้นสำหรับการออกแบบ */
-.load-container {
-    background-color: white;
-    /* สี overlay */
-}
-
 .load-content {
     padding: 20px;
 }
@@ -141,9 +137,10 @@
     width: 100%;
     height: 100%;
     background-color: black;
-    z-index: 5; /* อยู่ระหว่าง background และ content */
+    z-index: 10;
     opacity: 0;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: none; 
   }
   
   .load-container.fade-out {
