--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,48 +1,39 @@
 .main-container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    overflow: hidden;
-  }
-  
-  .candle-light {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(
-      circle at center,
-      rgba(255, 200, 100, 0.8) 0%,
-      rgba(255, 150, 50, 0.4) 50%,
-      transparent 70%
-    );
-    z-index: 10;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-  }
-  
-  .cake-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 80%;
-    max-height: 80%;
-    z-index: 2;
-    transition: opacity 1s ease;
-  }
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  overflow: hidden;
+}
 
-  .black-fade {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    z-index: 1;
-    opacity: 1;
-    transition: opacity 1s ease;
-  }
+.fade-image {
+  position: absolute;
+  transform: translate(-50%, -40%); /* เริ่มต่ำลงเล็กน้อย */
+  opacity: 0;
+  transition: opacity 1.5s ease, transform 2.5s ease;
+  z-index: 2;
+}
+
+.fade-image.visible {
+  opacity: 1;
+  transform: translate(-50%, -50%); /* เลื่อนขึ้นเล็กน้อยเมื่อแสดง */
+}
+
+
+.fade-image.visible {
+  opacity: 1;
+}
+
+.image1 {
+  top: 320px;
+  left: 770px;
+  width: 700px;
   
+}
+
+.image2 {
+  top: 720px;
+  left: 770px;
+  width: 750px;
+  position: absolute;
+}
